remove unnecessary JDK 13 build requirement